--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "superagent": "^3.1.0"
+    "superagent": "^3.1.0",
+    "underscore": "^1.8.3"
   }
 }
