--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.13.3",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "co": "^4.6.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-google-maps": "^6.0.1",
     "superagent": "^3.1.0",
     "underscore": "^1.8.3"
   }
